Updated surefire plugin to ignore test failures and generate reports